welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
  var tableauCouleurs:Array[Color] = tableauCouleurs()
                                                    ^